syntax = "proto3";

package rest_gateway_test.api.model;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    single_file: false
    lenses: true
    retain_source_code_info: true
    preserve_unknown_fields: false
    no_default_values_in_constructor: true
};

enum Color {
    UNKNOWN = 0;
    RED = 1;
    GREEN = 2;
    BLUE = 3;
}

message UUID {
    string value = 1;
}

message TestRequestA {
    int64 request_id = 1;
}

message TestResponseA {
    int64 request_id = 1;
    Color color = 2;
    UUID transaction_id = 3 [(scalapb.field).no_box = true];
}

message TestRequestB {
    int64 requestId = 1;
}

message TestResponseB {
    bool success = 1;
    int64 request_id = 2;
    string result = 3;
}

// in order to test different scenarios of path and request parameters
message GetMessageRequest {
    int32 message_id = 1;
    string user_id = 2;
}

message GetMessageResponse {
    string result = 1;
}
